<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/end_bg"
    android:paddingStart="@dimen/padding_sm"
    android:paddingEnd="@dimen/padding_sm"
    tools:context=".EndFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_xxs"
        android:layout_marginTop="@dimen/margin_sm"
        android:layout_marginEnd="@dimen/margin_xxs"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/card_corners"
        app:contentPadding="@dimen/padding_md">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.ArithmeticTrainer.TextView.Medium"
                android:text="@string/congratulations"
                android:textAlignment="center"
                android:textColor="?attr/colorAccent" />

            <TextView
                style="@style/Widget.ArithmeticTrainer.TextView.Medium"
                android:text="@string/new_score"
                android:textAlignment="center"
                android:textColor="?attr/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xs"
                android:layout_marginBottom="@dimen/margin_xs"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/score_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Widget.ArithmeticTrainer.TextView.Large"
                        android:fontFamily="@font/montserrat_extra_bold"
                        android:text="2"
                        android:textColor="?attr/colorAccent" />

                    <TextView
                        style="@style/Widget.ArithmeticTrainer.TextView.Small"
                        android:text="@string/correct_answers"
                        android:textAlignment="center"
                        android:textColor="?attr/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/score_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Widget.ArithmeticTrainer.TextView.Large"
                        android:fontFamily="@font/montserrat_extra_bold"
                        android:text="10"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        style="@style/Widget.ArithmeticTrainer.TextView.Small"
                        android:text="@string/total_questions"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.ArithmeticTrainer.TextView.Small"
                    android:layout_marginEnd="@dimen/margin_xxs"
                    android:text="@string/operations"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    style="@style/Widget.ArithmeticTrainer.TextView.Small"
                    android:text="@string/addition" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.ArithmeticTrainer.TextView.Small"
                    android:layout_marginEnd="@dimen/margin_xxs"
                    android:text="@string/difficulty"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    style="@style/Widget.ArithmeticTrainer.TextView.Small"
                    android:text="@string/easy" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/end_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_md"
        android:orientation="vertical">

        <Button
            android:id="@+id/restart_btn"
            style="@style/Widget.ArithmeticTrainer.Button.White"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/start_again"
            android:textColor="?attr/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>